--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -82,7 +82,9 @@
      '/admin/booking/reports/prereservations',
      '/admin/booking/activities-summary',
      '/admin/booking/reports/customers',
-     '/admin/booking/reports/stock'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.listing%></a>
+     '/admin/booking/reports/stock',
+     '/admin/booking/reports/detailed-picked-up-products',
+     '/admin/booking/reports/finances-finished-reservations'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.listing%></a>
      <ul>
         <% if booking_renting %>
         <li><a href='/admin/booking/reports/stock'><%=t.booking_console.report_stock%></a></li>
@@ -90,7 +92,9 @@
         <li><a href='/admin/booking/reports/reservations'><%=t.booking_console.report_reservations%></a></li>
         <li><a href='/admin/booking/reports/resource-reservations'><%=t.booking_console.report_resource_reservations%></a></li>        
         <li><a href='/admin/booking/reports/customer-reservations'><%=t.booking_console.report_customer_reservations%></a></li>  
-        <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>  
+        <li><a href='/admin/booking/reports/customers'><%=t.booking_console.report_customers%></a></li>
+        <li><a href='/admin/booking/reports/detailed-picked-up-products'><%=t.booking_console.report_picked_up_products%></a></li>
+        <li><a href='/admin/booking/reports/finances-finished-reservations'><%=t.booking_console.report_finances_finished_reservations%></a></li>
         <% end %>
         <% if booking_activities %>      
         <li><a href='/admin/booking/activities-summary'><%=t.booking_console.activities_report%></a></li>           
