--- a/views/report_finances_finished_reservations.erb
+++ b/views/report_finances_finished_reservations.erb
@@ -44,6 +44,7 @@
         <table id="table" class="table">
           <thead class="table-header">
           <tr>
+            <th class="table-cell" scope="col" style="width:2em">Localizador</th>
             <th class="table-cell" scope="col" style="width:2em">Matrícula</th>
             <th class="table-cell" scope="col" style="width:2em">Modelo</th>
             <th class="table-cell" scope="col" style="width:4.5em">Conductor</th>
@@ -55,6 +56,7 @@
           <tbody>
           <% @data.each do |reservation| %>
               <tr class="table-row">
+                <td class="table-cell"><a href="/admin/booking/bookings/<%=reservation.id%>"><%=reservation.id%></a></td>
                 <td class="table-cell"><%=reservation.booking_item_stock_plate%></td>
                 <td class="table-cell"><%=reservation.booking_item_stock_model%></td>
                 <td class="table-cell"><%=reservation.driver_name%> <%=reservation.driver_surname%></td>
