multiple rental locations

--- a/views/_booking_menu.erb
+++ b/views/_booking_menu.erb
@@ -155,6 +155,7 @@
         '/admin/booking/config/general',
         '/admin/postal/email-settings',
         '/admin/booking/config/templates',
+        '/admin/booking/rental-locations',
         '/admin/booking/booking-place-defs',
         '/admin/calendar/timetables',
         '/admin/rates/seasons','/admin/booking/booking-places',
@@ -164,6 +165,9 @@
         <li><a href='/admin/booking/config/general'><%=t.booking_console_configuration.general_configuration%></a></li>
         <li><a href='/admin/booking/config/templates'><%=t.booking_console_configuration.templates%></a></li>
         <li><a href='/admin/postal/email-settings'><%=t.booking_console_configuration.email_settings%></a></li>
+        <% if multiple_rental_locations %>
+        <li><a href='/admin/booking/rental-locations'><%=t.booking_console.rental_locations%></a></li>
+        <% end %>
         <li class='<%if ['/admin/booking/booking-place-defs','/admin/calendar/timetables'].index(request.path)%>active <%end%>has-sub'><a href='#'><%=t.booking_console.pickup_return%></a>
           <ul>
             <li><a href='/admin/booking/booking-place-defs'><%=t.booking_console.places%></a></li>
