--- a/views/bookings_management.erb
+++ b/views/bookings_management.erb
@@ -128,7 +128,21 @@
                     </span>
                  </span>
                </div>
-            </div> 
+            </div>
+            <% if multiple_rental_locations %>
+            <div class="element_template">
+              <div class="entity-field">
+                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.rental_location %></span>
+                <span class="entity-fieldvalue">
+                  <form name="rental_location">
+                      <input type="hidden" name="id" value="<%%=entity.id%>"/>
+                      <select name="rental_location_id" id="rental_location"></select>
+                      <input type="submit" class="update-entity-button action-button entity-management-button" value="<%=t.entitymanagement.update%>"/>
+                  </form>
+                </span>
+              </div>
+            </div>
+            <% end %>
         </div>
       
         <div class="grid_5">
@@ -182,7 +196,7 @@
                </div>
             </div>        
           <%% } %>           
-           <div class="element_template" style="display:none">
+           <div class="element_template">
              <div class="entity-field">
                <span class="entity-fieldlabel less_contrast_text"><%= t.booking_management.form.days %></span>
                <span class="entity-fieldvalue"><%%= entity.days %></span>
