--- a/views/bookings_management.js.erb
+++ b/views/bookings_management.js.erb
@@ -445,12 +445,12 @@ require(['jquery', 'YSDEntityManagement','YSDRemoteDataSource', 'YSDSelectSelect
 
       // Configure rental
       <% if multiple_rental_locations %>
-      var dataSourceRentalLocation = new RemoteDataSource('/api/booking-rental-locations?all=yes',{'id':'id','description':'name'});
-      var valueRentalLocation = entity.rental_location_id;
+      var dataSourceRentalLocation = new RemoteDataSource('/api/booking-rental-locations?all=yes',{'id':'code','description':'name'});
+      var valueRentalLocation = entity.rental_location_code;
       var selectorRentalLocation = new SelectSelector('rental_location',
             dataSourceRentalLocation, valueRentalLocation, true );
       <% end %>
-        
+
     }
 
     this.configForm = function(entity) {
